# ask-another

./: .gitignore  .mcp.json  .mcpbignore  CLAUDE.md  DESIGN.md  Makefile  Markdown Documentation Standards v3-03.md  PLAN.md  README.md  ask-another.mcpb  manifest.json  pyproject.toml
.claude-plugin/: marketplace.json
.claude/skills/research-models/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: install.md  model-report.md  models.psv  reference.md
docs/superpowers/: acceptance-test-results.md
docs/superpowers/plans/: 2026-03-12-annotations-system.md  2026-03-13-enrichment-v2.md  2026-03-13-readme-rewrite.md  2026-03-13-usage-testing.md  2026-03-29-auth-error-health-marking.md  2026-03-29-provider-health-validation.md
docs/superpowers/specs/: 2026-03-13-enrichment-v2-design.md  2026-03-13-readme-rewrite-design.md  2026-03-13-usage-testing-design.md  2026-03-29-provider-health-validation-design.md
plugins/ask-another/: .mcp.json
plugins/ask-another/.claude-plugin/: plugin.json
plugins/ask-another/commands/: ask-another.md  configure.md  reset.md  status.md
scripts/: generate_peer_review_prompt.py
src/ask_another/: __init__.py  models.psv  server.py
tests/: conftest.py  test_annotations.py  test_feedback.py  test_image_generation.py  test_logging.py  test_provider_config.py  test_provider_health.py  test_psv.py
tests/integration/: conftest.py  test_enrichment_live.py  test_image_live.py  test_mcp_smoke.py  test_providers_live.py  test_search_live.py
