[project]
name = "ask-another"
version = "2.0.0"
description = "MCP server for querying other LLMs through a unified interface"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "litellm>=1.83.0",
    "pillow>=10.0.0",
]

[project.scripts]
ask-another = "ask_another.server:main"

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: hits live provider APIs (costs money, requires PROVIDER_* keys)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ask_another"]

[tool.hatch.build]
include = ["src/ask_another/**/*.py"]
